Revert "Merged in DMC-758-extra-requirements-for-member-an (pull request #24)"
This reverts commit 0548863db700dac551e0e3aeeb1bce8c3280dcba, reversing
changes made to 1f79a1dcac1ab39f52267963b907e3bbe5a33448.
